Fri May 13 07:04:33 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/mathn.rb:  Fix indentation.  Patch by Jason Dew.
          [Ruby 1.9 - Feature #4682]

Fri May 13 06:50:43 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/mathn.rb:  Add documentation.  Patch by Jason Dew.  [Ruby 1.9 -
	  Feature #4667]

Fri May 13 05:44:19 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/logger.rb (class Logger):  Document Logger#datetime_format.
	  Patch by Sergio Gil Pérez de la Manga.  [Ruby 1.9 - Bug #4678]

Fri May 13 05:39:11 2011  Eric Hodel <drbrain@segment7.net>

	* re.c (Init_Regexp): Document option constants.  Patch by Vincent
	  Batts.  [Ruby 1.9 - Bug #4677]
	* lib/uri/common.rb (module URI):  Documentation for URI.  Patch by
	  Vincent Batts.  [Ruby 1.9- Bug #4677]
	* lib/uri/ftp.rb (module URI):  ditto
	* lib/uri/generic.rb (module URI):  ditto
	* lib/uri/http.rb (module URI):  ditto
	* lib/uri/https.rb (module URI):  ditto
	* lib/uri/ldap.rb (module URI):  ditto
	* lib/uri/ldaps.rb (module URI):  ditto
	* lib/uri/mailto.rb (module URI):  ditto
	* process.c (Init_process):  Document Process constants.  Patch by
	  Vincent Batts.  [Ruby 1.9- Bug #4677]

Fri May 13 05:16:38 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rss/atom.rb (module RSS):  Document URIs.  Patch by Mark Turner.
	  [Ruby 1.9 - #4671]
	* lib/rss/rss.rb (module RSS):  Document exception classes.  Patch by
	  Mark Turner.  [Ruby 1.9 - #4671]

Fri May 13 02:15:18 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (select_internal): remove unused variable (interrupt_flag).

Thu May 12 18:24:34 2011  Kouhei Sutou  <kou@clear-code.com>

	* configure.in: limit to "T" type for prefix of external symbols
	  because x86_64-w64-mingw32-gcc on Debian GNU/Linux generates the
	  following symbol:
	    0000000068483390 D _GLOBAL__F__conftest_external

	  Approved by nobu.

Thu May 12 14:50:52 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
